added more translations

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -8,6 +8,7 @@ AddNewChildCategory=Add new child category
 AdditionalInformation=Additional information
 Address=Address
 AdministrativeInformation=Administrative information
+Allocation=Allocation
 AllocationMethod=Allocation method
 AlreadyConnected=Already connected
 AlreadyPresent=Already present
@@ -32,8 +33,11 @@ CalculateResults=Calculate results
 CalculationProperties=Calculation properties
 CalculationType=Calculation type
 CalculationWizardDescription=Please select the properties for the calculation
+CannotDeleteRefFlow=Cannot delete reference flow
+CannotDeleteRefFlowMessage=You cannot delete the reference flow of a process
 Category=Category
 Causal=Causal
+CausalAllocation=Causal allocation
 Change=Change
 CheckForUpdates=Check for updates
 ChooseDirectory=Choose directory...
@@ -120,10 +124,12 @@ ExpandAll=Expand all
 Export=Export...
 ExportAsMatrix=Export as matrix
 ExportDatabase=Export database
+ExportDone=Export done
 ExportEcoSpold=Export EcoSpold
 ExportILCD=Export ILCD
 ExportToExcel=Export to Excel
 ExportingProcesses=Exporting processes
+ExportProcess=Export process ...
 Factor=Factor
 File=&File
 FileAlreadyExists=File already exists
@@ -181,15 +187,20 @@ Information=Information
 InfrastructureFlow=Infrastructure flow
 InfrastructureProcess=Infrastructure process
 InputParameters=Input parameters
+Input=Input
 Inputs=Inputs
 InputsOutputs=Inputs/Outputs
 IntendedApplication=Intended application
+InvalidAllocationFactor=Invalid factor
+InvalidAllocationFactorMessage=An allocation factor should have a value between 0 and 1.
 InvalidFormula=Invalid formula
+InvalidNumber=Invalid number
 InvalidParameterName=Invalid parameter name
 IsInvalidFormula=is an invalid formula
 IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
 IsReference=Is reference
+KmlEditor=KML Editor
 LCIMethod=LCI method
 Language=Language
 LastChange=Last change
@@ -264,6 +275,7 @@ OpenInEditor=Open in editor
 OpenLCAUpdateCheck=openLCA update check
 OpenMiniatureView=Open miniature view
 Other=Other
+Output=Output
 Outputs=Outputs
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
@@ -272,6 +284,7 @@ Password=Password
 Paste=Paste
 PedigreeUncertainty=Pedigree uncertainty
 Physical=Physical
+PhysicalAndEconomicAllocation=Physical & economic allocation
 PleaseEnterAName=Please enter a name
 PleaseEnterANewName=Please enter a new name
 PleaseEnterTheNameOfTheNewCategory=Please enter the name of the new category\:
@@ -411,6 +424,7 @@ Website=Website
 Weekly=Weekly
 Weighting=Weighting
 WeightingFactor=Weighting factor
+Welcome=Welcome
 Window=&Window
 WithPassword=With password
 Year=Year
