added more translation keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -22,6 +22,7 @@ Author=Author
 AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
 AvoidedWasteFlow=Avoided waste flow
+BaseUncertainty=Base uncertainty
 Browse=Browse
 BuildNextTier=Build next tier
 BuildSupplyChain=Build supply chain
@@ -33,6 +34,7 @@ CalculateResults=Calculate results
 CalculationProperties=Calculation properties
 CalculationType=Calculation type
 CalculationWizardDescription=Please select the properties for the calculation
+Cancel=Cancel
 CannotDeleteRefFlow=Cannot delete reference flow
 CannotDeleteRefFlowMessage=You cannot delete the reference flow of a process
 Category=Category
@@ -43,6 +45,7 @@ CheckForUpdates=Check for updates
 ChooseDirectory=Choose directory...
 City=City
 ClickHereToChangeDisplay=Click here to change the display
+CloseDatabase=Close database
 Code=Code
 Collapse=collapse
 CollapseAll=Collapse all
@@ -60,6 +63,8 @@ Contribution=Contribution
 ConversionFactor=Conversion factor
 Copy=Copy
 Copyright=Copyright
+CostCategory=Cost category
+CouldNotOpenDatabase=Could not open database
 Country=Country
 CreateANewDatabase=Create a new database
 CreateANewProductFlowForTheProcess=Create a new product flow for the process
@@ -97,7 +102,9 @@ DatabaseContent=Database content
 DatabaseImport=Database import
 DatabaseImportDescription=Imports data from an existing database into the active database
 DatabaseName=Database name
+DatabaseNeedsUpdate=The given database is newer than this openLCA version.
 DatabaseType=Database type
+DatabaseVersionCheckFailed=Could not get the version from the database. Is this an openLCA database?
 DefaultFlowProperty=Default flow property
 DefaultMethod=Default method
 DefaultProvider=Default provider
@@ -130,12 +137,14 @@ ExportILCD=Export ILCD
 ExportToExcel=Export to Excel
 ExportingProcesses=Exporting processes
 ExportProcess=Export process ...
+ILCDNetworkExportDescription=Export processes or product systems to an ILCD network.
 Factor=Factor
 File=&File
 FileAlreadyExists=File already exists
 FileImportPage_Description=Please select the files to import into openLCA
 Filter=Filter
 FilterByName=Filter by name
+FixedCosts=Fixed costs
 Flow=Flow
 FlowContributions=Flow contributions
 FlowProperties=Flow properties
@@ -173,6 +182,8 @@ ILCD_NetworkImport=Network Import
 ILCD_RunImport=Run Import
 ILCD_SearchFailedMessage=Network search failed\: 
 ILCD_SearchPageDescription=Search and select processes for the import
+ILCDNetworkExport=ILCD Network Export
+ImageExport=Image export
 ImpactAssessmentMethod=Impact assessment method
 ImpactAssessmentMethods=Impact assessment methods
 ImpactCategories=Impact categories
@@ -183,6 +194,7 @@ Import=Import...
 ImportDatabase=Import database
 ImportEcoSpold=Import EcoSpold
 ImportILCD=Import ILCD
+IndicatorScore=Indicator score
 Information=Information
 InfrastructureFlow=Infrastructure flow
 InfrastructureProcess=Infrastructure process
@@ -196,6 +208,7 @@ InvalidAllocationFactorMessage=An allocation factor should have a value between 
 InvalidFormula=Invalid formula
 InvalidNumber=Invalid number
 InvalidParameterName=Invalid parameter name
+InvalidValue=Invalid value
 IsInvalidFormula=is an invalid formula
 IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
@@ -232,9 +245,11 @@ MonteCarloSimulation=Monte Carlo Simulation
 Monthly=Monthly
 Move=move
 Name=Name
+NameEmptyOrAlreadyExists=The name is empty or already exists
 Never=Never
 NewActor=New actor
 NewCategory=new category
+NewCostEntry=New cost entry
 NewDatabase=New database
 NewDatabase_AlreadyExists=A database with this name already exists
 NewDatabase_InvalidName=The name is not a valid identifier (characters, numbers, and underscores are allowed)
@@ -251,6 +266,7 @@ NewSource=New source
 NewUnitGroup=New unit group
 No=No
 NoAnalysisOptionsSet=No analysis options set
+NoCostCategorySelected=No cost category selected
 NoDescription=No description
 NoDistribution=No distribution
 NoQuantitativeReferenceSelected=No quantitative reference selected
@@ -258,6 +274,7 @@ NoReferenceFlowPropertySelected=No reference flow property selected
 NoReferenceProcessSelected=No reference process selected
 NoUnitGroupSelected=No unit group selected
 None=None
+NoProjectVaraintsAreDefined=No project varaints are defined
 NormalDistribution=Normal distribution
 Normalization=Normalization
 NormalizationAndWeightingSet=Normalization and weighting set
@@ -269,8 +286,10 @@ NumberFormatPage_Description=Set the number of decimal places for the display of
 NumberOfDecimalPlaces=Number of decimal places
 NumberOfIterations=Number of iterations\:
 NumberOfSimulations=Number of simulations
+OK=OK
 OnlineHelp=Online help
 Open=Open
+OpenDatabase=Open database
 OpenInEditor=Open in editor
 OpenLCAUpdateCheck=openLCA update check
 OpenMiniatureView=Open miniature view
@@ -282,6 +301,8 @@ Parameter=Parameter
 Parameters=Parameters
 Password=Password
 Paste=Paste
+PedigreeMatrix=Pedigree matrix
+PedigreeMatrixMessage=Click on the matrix cells to select entries
 PedigreeUncertainty=Pedigree uncertainty
 Physical=Physical
 PhysicalAndEconomicAllocation=Physical & economic allocation
@@ -295,6 +316,7 @@ Port=Port
 Prefer=Prefer\: {0}
 Process=Process
 ProcessContributions=Process contributions
+ProcessCosts=Process costs
 ProcessEvaluationAndValidation=Process evaluation and validation
 ProcessType=Process type
 Processes=Processes
@@ -407,6 +429,8 @@ Units=Units
 UnitsAndFlowProperties=Units and flow properties
 Unknown=Unknown
 Unmark=Unmark
+UpdateDatabase=Update database
+UpdateDatabaseQuestion=The selected database needs an update. Do you want to run it?
 UpdateMajorVersion=Update major version
 UpdateMinorVersion=Update minor version
 UpdatePreferences=Update preferences
