added more translation keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -35,9 +35,12 @@ CalculationProperties=Calculation properties
 CalculationType=Calculation type
 CalculationWizardDescription=Please select the properties for the calculation
 Cancel=Cancel
+CannotDelete=Cannot delete
+CannotDeleteMessage=The selected element cannot be deleted because it is used in other data sets. See the usage view to see where it is used.
 CannotDeleteRefFlow=Cannot delete reference flow
 CannotDeleteRefFlowMessage=You cannot delete the reference flow of a process
 Category=Category
+CategoryNotEmpty=The category is not empty.
 Causal=Causal
 CausalAllocation=Causal allocation
 Change=Change
@@ -56,15 +59,18 @@ ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 ConnectWithSystemProcessesIfPossible=Connect with system processes if possible
 Connection=Connection
+ConnectionFailed=Connection failed
 ConsumedBy=Consumed by
 Content=Content
 Context=Context
 Contribution=Contribution
+ContributionTree=Contribution tree
 ConversionFactor=Conversion factor
 Copy=Copy
 Copyright=Copyright
 CostCategory=Cost category
 CouldNotOpenDatabase=Could not open database
+CouldNotOverwriteFile=Could not overwrite file
 Country=Country
 CreateANewDatabase=Create a new database
 CreateANewProductFlowForTheProcess=Create a new product flow for the process
@@ -103,17 +109,26 @@ DatabaseImport=Database import
 DatabaseImportDescription=Imports data from an existing database into the active database
 DatabaseName=Database name
 DatabaseNeedsUpdate=The given database is newer than this openLCA version.
+DatabaseRenameError=The given name is not a valid or a database with this name already exists.
 DatabaseType=Database type
 DatabaseVersionCheckFailed=Could not get the version from the database. Is this an openLCA database?
+DatabaseWasExportedToFile=Database was exported to file
+DBImportNoTarget=You need to open a target database of the import.
+DBImportNoTargetConnectionFailedMessage=Could not get the version from the source database.
+DBImportUpdateDatabaseQuestion=In order to run the import you need to update the source database. Do you want to do this?
+DBImportVersionNewerMessage=The version of the source database is newer than this version of openLCA.
 DefaultFlowProperty=Default flow property
 DefaultMethod=Default method
 DefaultProvider=Default provider
 Delete=Delete
+DeleteCategoryQuestion=Do you really want to delete the selected category?
 DeleteDatabase=Delete database
 DeleteProcess=delete process
 DeleteProcesslink=delete processlink
 DependentParameters=Dependent parameters
 Description=Description
+DirectContribution=Direct contribution
+DirectImpact=Direct impact
 Direction=Direction
 DoYouReallyWantToDelete=Do you really want to delete {0}
 Doi=Doi
@@ -125,6 +140,8 @@ EmptyDatabase=Empty database
 EndDate=End date
 English=English
 Error=Error
+ErrorPopupMessage=See the log-file for further information
+ErrorPopupTitle=An unexpected error occured
 Example=Example
 Expand=expand
 ExpandAll=Expand all
@@ -137,6 +154,7 @@ ExportILCD=Export ILCD
 ExportToExcel=Export to Excel
 ExportingProcesses=Exporting processes
 ExportProcess=Export process ...
+ExportResults=Export results
 ILCDNetworkExportDescription=Export processes or product systems to an ILCD network.
 Factor=Factor
 File=&File
@@ -150,6 +168,7 @@ FlowContributions=Flow contributions
 FlowProperties=Flow properties
 FlowProperty=Flow property
 FlowPropertyType=Flow property type
+FlowResults=Flow results
 FlowType=Flow type
 Flows=Flows
 Folder=Folder
@@ -186,11 +205,13 @@ ILCDNetworkExport=ILCD Network Export
 ImageExport=Image export
 ImpactAssessmentMethod=Impact assessment method
 ImpactAssessmentMethods=Impact assessment methods
+ImpactAssessmentResults=Impact assessment results
 ImpactCategories=Impact categories
 ImpactCategory=Impact category
 ImpactContributions=Impact contributions
 ImpactFactors=Impact factors
 Import=Import...
+ImportData=Import data
 ImportDatabase=Import database
 ImportEcoSpold=Import EcoSpold
 ImportILCD=Import ILCD
@@ -245,6 +266,7 @@ MonteCarloSimulation=Monte Carlo Simulation
 Monthly=Monthly
 Move=move
 Name=Name
+NameCannotBeEmpty=The name cannot be empty
 NameEmptyOrAlreadyExists=The name is empty or already exists
 Never=Never
 NewActor=New actor
@@ -267,6 +289,7 @@ NewUnitGroup=New unit group
 No=No
 NoAnalysisOptionsSet=No analysis options set
 NoCostCategorySelected=No cost category selected
+NoDatabaseOpened=No database opened
 NoDescription=No description
 NoDistribution=No distribution
 NoQuantitativeReferenceSelected=No quantitative reference selected
@@ -320,6 +343,7 @@ ProcessCosts=Process costs
 ProcessEvaluationAndValidation=Process evaluation and validation
 ProcessType=Process type
 Processes=Processes
+ProcessResults=Process results
 ProducedBy=Produced by
 Product=Product
 ProductSystem=Product system
@@ -390,6 +414,7 @@ ShowOutline=Show outline
 ShowValues=Show values
 Showviews=Show &views
 SingleAmount=Single amount
+SingleScore=Single score
 SolvingProblems=Solving problems
 Source=Source
 Sources=Sources
@@ -435,6 +460,7 @@ UpdateMajorVersion=Update major version
 UpdateMinorVersion=Update minor version
 UpdatePreferences=Update preferences
 UpdatingProductSystem=Updating product system
+UpstreamTotal=Upstream total
 Usage=Usage
 UsageOf=Usage of
 UsedInProcesses=Used in processes
@@ -442,6 +468,7 @@ User=User
 UserFriendlyName=User friendly name
 Value=Value
 Version=Version
+VersionNewer=Version newer
 Warning=Warning
 Waste=Waste
 Website=Website
