added more message keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -123,6 +123,8 @@ DefaultProvider=Default provider
 Delete=Delete
 DeleteCategoryQuestion=Do you really want to delete the selected category?
 DeleteDatabase=Delete database
+DeleteDatabaseParameterQuestion=Do you really want to delete the selected parameter from the database?
+DeleteParameter=Delete paramater
 DeleteProcess=delete process
 DeleteProcesslink=delete processlink
 DependentParameters=Dependent parameters
@@ -148,6 +150,7 @@ ExpandAll=Expand all
 Export=Export...
 ExportAsMatrix=Export as matrix
 ExportDatabase=Export database
+ExportDirectory=Export directory
 ExportDone=Export done
 ExportEcoSpold=Export EcoSpold
 ExportILCD=Export ILCD
@@ -157,6 +160,7 @@ ExportProcess=Export process ...
 ExportResults=Export results
 ILCDNetworkExportDescription=Export processes or product systems to an ILCD network.
 Factor=Factor
+FailedToLoadFlowProperty=Failed to load flow property
 File=&File
 FileAlreadyExists=File already exists
 FileImportPage_Description=Please select the files to import into openLCA
@@ -214,11 +218,13 @@ Import=Import...
 ImportData=Import data
 ImportDatabase=Import database
 ImportEcoSpold=Import EcoSpold
+ImportEcoSpold01DataSets=Import EcoSpold 01 data sets
 ImportILCD=Import ILCD
 IndicatorScore=Indicator score
 Information=Information
 InfrastructureFlow=Infrastructure flow
 InfrastructureProcess=Infrastructure process
+InitializeSimulation=Initialize simulation
 InputParameters=Input parameters
 Input=Input
 Inputs=Inputs
@@ -230,6 +236,7 @@ InvalidFormula=Invalid formula
 InvalidNumber=Invalid number
 InvalidParameterName=Invalid parameter name
 InvalidValue=Invalid value
+InventoryResults=Inventory results
 IsInvalidFormula=is an invalid formula
 IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
@@ -254,6 +261,7 @@ Maximize=maximize
 MaximizeAll=Maximize all
 Maximum=Maximum
 Mean=Mean
+Methods=Methods
 MinimalTree=minimal tree
 Minimize=minimize
 MinimizeAll=Minimize all
@@ -305,6 +313,7 @@ NormalizationFactor=Normalization factor
 NormalizationWeighting=Normalization and weighting
 NormalizationWeightingSets=Normalization and weighting sets
 Note=Note
+Notification=Notification
 NumberFormatPage_Description=Set the number of decimal places for the display of numbers.
 NumberOfDecimalPlaces=Number of decimal places
 NumberOfIterations=Number of iterations\:
@@ -313,6 +322,7 @@ OK=OK
 OnlineHelp=Online help
 Open=Open
 OpenDatabase=Open database
+OpenEditor=Open editor
 OpenInEditor=Open in editor
 OpenLCAUpdateCheck=openLCA update check
 OpenMiniatureView=Open miniature view
@@ -347,9 +357,12 @@ ProcessResults=Process results
 ProducedBy=Produced by
 Product=Product
 ProductSystem=Product system
+ProductSystemExcelExport=Product system Excel export
+ProductSystemExcelExportMessage=Please select a directory to export the product system to. \nA new one, where all created files are placed, will be created under the selected directory.
 ProductSystems=Product systems
 Progress=Progress
 Project=Project
+ProjectResults=Project results
 Projects=Projects
 Properties=Properties
 Publication=Publication
@@ -467,6 +480,7 @@ UsedInProcesses=Used in processes
 User=User
 UserFriendlyName=User friendly name
 Value=Value
+Variant=Variant
 Version=Version
 VersionNewer=Version newer
 Warning=Warning
