added more message keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -135,6 +135,7 @@ Direction=Direction
 DoYouReallyWantToDelete=Do you really want to delete {0}
 Doi=Doi
 Economic=Economic
+EcoSpold2Export=EcoSpold 2 Export
 Edit=Edit
 ElementaryFlow=Elementary flow
 Email=e-mail
@@ -145,6 +146,7 @@ Error=Error
 ErrorPopupMessage=See the log-file for further information
 ErrorPopupTitle=An unexpected error occured
 Example=Example
+ExcelExport=Excel Export
 Expand=expand
 ExpandAll=Expand all
 Export=Export...
@@ -195,6 +197,7 @@ Grouping=Grouping
 Groups=Groups
 Help=&Help
 Hide=Hide
+Home=Home
 Host=Host
 Hourly=Hourly
 ILCD_AUTHENTICATION_FAILED_MSG=Authentication failed. Please check your user name and password.
@@ -219,6 +222,7 @@ ImportData=Import data
 ImportDatabase=Import database
 ImportEcoSpold=Import EcoSpold
 ImportEcoSpold01DataSets=Import EcoSpold 01 data sets
+ImportEcoSpold02DataSets=Import EcoSpold 02 data sets
 ImportILCD=Import ILCD
 IndicatorScore=Indicator score
 Information=Information
@@ -242,6 +246,8 @@ IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
 IsReference=Is reference
 KmlEditor=KML Editor
+LCIAMethod=LCIA Method
+LCIAResult=LCIA Results
 LCIMethod=LCI method
 Language=Language
 LastChange=Last change
@@ -351,6 +357,7 @@ Process=Process
 ProcessContributions=Process contributions
 ProcessCosts=Process costs
 ProcessEvaluationAndValidation=Process evaluation and validation
+ProcessExcelImportDescription=Import processes from MS Excel
 ProcessType=Process type
 Processes=Processes
 ProcessResults=Process results
@@ -364,6 +371,7 @@ Progress=Progress
 Project=Project
 ProjectResults=Project results
 Projects=Projects
+ProjectSetup=Project setup
 Properties=Properties
 Publication=Publication
 QuantitativeReference=Quantitative reference
@@ -374,6 +382,7 @@ ReferenceFlowProperty=Reference flow property
 ReferenceProcess=Reference process
 ReferenceUnit=Reference unit
 ReferenceUnitIsEmptyOrInvalid=Reference unit is empty or invalid
+RegionalizedLCIA=Regionalized LCIA
 Reload=Reload
 Remote=Remote
 RemoteDatabase=Remote database
@@ -389,12 +398,15 @@ ReserveMemoryMessage=Reserve the following amount of memory for openLCA
 Reset=Reset
 Resize=resize
 ResultContributions=Result contributions
+Result=Result
 Results=Results
 ResultsOf=Results of
 Reviewer=Reviewer
 Route=Route
+RunCalculation=Run calculation
 SamplingProcedure=Sampling procedure
 Sankey_ScaleDescription=Process colour scale (contributions in [%])
+SankeyDiagram=Sankey diagram
 Save=Save
 SaveAs=Save as...
 SaveAsDefault=Save as default
@@ -408,6 +420,7 @@ SearchProvidersFor=Search providers for
 SearchRecipientsFor=Search recipients for
 Searching=Searching...
 SearchingForUnits=Searching for units...
+SearchTextOpenDatabaseMessage=You first need to open a database
 Select=Select {0}
 SelectADirectory=Select a directory
 SelectAUserInterfaceLanguage=Select a user interface language
@@ -426,6 +439,7 @@ ShowFormulas=Show formulas
 ShowOutline=Show outline
 ShowValues=Show values
 Showviews=Show &views
+SimaProCSVImport=SimaPro CSV Import
 SingleAmount=Single amount
 SingleScore=Single score
 SolvingProblems=Solving problems
@@ -481,6 +495,7 @@ User=User
 UserFriendlyName=User friendly name
 Value=Value
 Variant=Variant
+Variants=Variants
 Version=Version
 VersionNewer=Version newer
 Warning=Warning
