added more message keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -52,6 +52,8 @@ CloseDatabase=Close database
 Code=Code
 Collapse=collapse
 CollapseAll=Collapse all
+ColumnSeparator=Column separator
+Comma=Comma
 Complete=Complete
 CompleteReferenceData=Complete reference data
 Connect=Connect
@@ -90,6 +92,7 @@ CreatesANewUnitGroup=Creates a new unit group
 CreatingEcoSpoldFolder=Creating ecoSpold folder
 CreatingProductSystem=Creating product system
 CreationDate=Creation date
+CSVFormat=CSV Format
 Cut=Cut
 CutOffForFirstLayerIn=Cut off for first layer (in %)
 Cutoff=Cut-off
@@ -117,6 +120,7 @@ DBImportNoTarget=You need to open a target database of the import.
 DBImportNoTargetConnectionFailedMessage=Could not get the version from the source database.
 DBImportUpdateDatabaseQuestion=In order to run the import you need to update the source database. Do you want to do this?
 DBImportVersionNewerMessage=The version of the source database is newer than this version of openLCA.
+DecimalSeparator=Decimal separator
 DefaultFlowProperty=Default flow property
 DefaultMethod=Default method
 DefaultProvider=Default provider
@@ -134,6 +138,7 @@ DirectImpact=Direct impact
 Direction=Direction
 DoYouReallyWantToDelete=Do you really want to delete {0}
 Doi=Doi
+Dot=Dot
 Economic=Economic
 EcoSpold2Export=EcoSpold 2 Export
 Edit=Edit
@@ -158,8 +163,10 @@ ExportEcoSpold=Export EcoSpold
 ExportILCD=Export ILCD
 ExportToExcel=Export to Excel
 ExportingProcesses=Exporting processes
+ExportMatrix=Export matrix
 ExportProcess=Export process ...
 ExportResults=Export results
+ExportResultsToExcel=Export results to Excel
 ILCDNetworkExportDescription=Export processes or product systems to an ILCD network.
 Factor=Factor
 FailedToLoadFlowProperty=Failed to load flow property
@@ -234,6 +241,7 @@ Input=Input
 Inputs=Inputs
 InputsOutputs=Inputs/Outputs
 IntendedApplication=Intended application
+InterventionMatrix=Intervention matrix
 InvalidAllocationFactor=Invalid factor
 InvalidAllocationFactorMessage=An allocation factor should have a value between 0 and 1.
 InvalidFormula=Invalid formula
@@ -263,6 +271,8 @@ LogNormalDistribution=Logarithmic normal distribution
 Longitude=Longitude
 Map=Map
 Mark=Mark
+MatrixExport=Matrix Export
+MatrixFiles=Matrix files
 Maximize=maximize
 MaximizeAll=Maximize all
 Maximum=Maximum
@@ -306,6 +316,7 @@ NoCostCategorySelected=No cost category selected
 NoDatabaseOpened=No database opened
 NoDescription=No description
 NoDistribution=No distribution
+NoExportFilesSelected=No export files selected
 NoQuantitativeReferenceSelected=No quantitative reference selected
 NoReferenceFlowPropertySelected=No reference flow property selected
 NoReferenceProcessSelected=No reference process selected
@@ -418,6 +429,7 @@ Search=Search
 SearchParameters=Search parameters
 SearchProvidersFor=Search providers for
 SearchRecipientsFor=Search recipients for
+SearchResults=Search results
 Searching=Searching...
 SearchingForUnits=Searching for units...
 SearchTextOpenDatabaseMessage=You first need to open a database
@@ -431,6 +443,7 @@ SelectProviders=Select providers
 SelectRecipients=Select recipients
 SelectTheExportFile=Select the export file
 SelectTheParameterYouWantToReferTo=Select the parameter you want to refer to
+Semicolon=Semicolon
 SetSankeyDiagramOptions=Set sankey diagram options
 Settings=Settings
 SettingsForTheSankeyDiagram=Settings for the Sankey diagram
@@ -452,12 +465,14 @@ SubCategory=Sub-category
 Synonyms=Synonyms
 SystemProcess=System process
 SystemSaveProceedQuestion=In order to perform the requested task the product system must be saved. Do you want to proceed?
+Tab=Tab
 TargetAmount=Target amount
 Technology=Technology
 Telefax=Telefax
 Telephone=Telephone
 Test=Test
 TestDistribution=Test distribution
+TexchnologyMatrix=Technology matrix
 TextDropComponent_ToolTipText=Drag a selected object from \nthe navigation view into the \ntext field or click to open a \ndialog.
 TextReference=Text reference
 Time=Time
