added more translation keys

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -128,6 +128,7 @@ Delete=Delete
 DeleteCategoryQuestion=Do you really want to delete the selected category?
 DeleteDatabase=Delete database
 DeleteDatabaseParameterQuestion=Do you really want to delete the selected parameter from the database?
+DeleteFile=Delete file
 DeleteParameter=Delete paramater
 DeleteProcess=delete process
 DeleteProcesslink=delete processlink
@@ -172,6 +173,7 @@ Factor=Factor
 FailedToLoadFlowProperty=Failed to load flow property
 File=&File
 FileAlreadyExists=File already exists
+FileDoesNotExist=File does not exist
 FileImportPage_Description=Please select the files to import into openLCA
 Filter=Filter
 FilterByName=Filter by name
@@ -346,6 +348,7 @@ OpenMiniatureView=Open miniature view
 Other=Other
 Output=Output
 Outputs=Outputs
+OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
 Parameters=Parameters
@@ -457,6 +460,8 @@ SingleAmount=Single amount
 SingleScore=Single score
 SolvingProblems=Solving problems
 Source=Source
+SourceFileDeleteQuestion=Do you really want to delete this file?
+SourceFileOverwriteFileQuestion=A file with the given name already exists in this database. Do you want to overwrite it?
 Sources=Sources
 StandardDeviation=Standard deviation
 Start=Start
