--- a/olca-app/OSGI-INF/l10n/bundle_es.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_es.properties
@@ -1,4 +1,4 @@
-#Tue Jul 08 19:58:02 CEST 2014
+#Wed Jul 09 11:46:35 CEST 2014
 ActorEditor=Editor de actor
 Actors=Actores
 DataProvider=Proveedor de datos
@@ -12,8 +12,8 @@ Flows=Flujos
 GlobalParameters=Par\u00E1metros globales
 ILCD=ILCD
 ILCDNetwork=Red ILCD
-ILCDNetworkExport=Exportaci\u00F3n de Red ILCD
-ILCDNetworkImport=Importaci\u00F3n de Red ILCD
+ILCDNetworkExport=Exportar Red ILCD
+ILCDNetworkImport=Importar Red ILCD
 ImpactMethodEditor=Editor de m\u00E9todo de evaluaci\u00F3n de impacto
 ImpactMethods=M\u00E9todos de impacto
 LCIAMethods=M\u00E9todos de EICV
@@ -35,4 +35,3 @@ UnitGroups=Grupos de unidad
 Updates=Actualizaciones
 Usage=Uso
 WasteFlows=Flujos de residuo
-Welcome=Bienvenido
