--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Tue Jul 08 19:41:48 CEST 2014
+#Wed Jul 09 16:33:33 CEST 2014
 AccessAndUseRestrictions=Restricciones de acceso y uso
 Actor=Actor
 Actors=Actores
@@ -60,14 +60,14 @@ CompleteReferenceData=Datos de referencia completos
 Connect=Conectar
 ConnectProviders=Conectar proveedores
 ConnectRecipients=Conectar destinatarios
-ConnectWithSystemProcessesIfPossible=Conectar con sistemas de procesos si es posible
+ConnectWithSystemProcessesIfPossible=Conectar con procesos agregados si es posible
 Connection=Conexi\u00F3n
 ConnectionFailed=No se pudo conectar
 ConsumedBy=Consumido por
 Content=Contenido
 Context=Contexto
 Contribution=Contribuci\u00F3n
-ContributionTree=Diagrama de contribuci\u00F3n
+ContributionTree=\u00C1rbol de contribuciones
 ConversionFactor=Factor de conversi\u00F3n
 Copy=Copiar
 Copyright=Derechos de autor
@@ -96,9 +96,9 @@ CreationDate=Fecha de creaci\u00F3n
 Cut=Cortar
 CutOffForFirstLayerIn=Corte de la primera capa (en %)
 Cutoff=Corte
-DBImportNoTarget=Por favor, active la base de datos destino de la importaci\u00F3n.
+DBImportNoTarget=Por favor, abra la base de datos destino de la importaci\u00F3n.
 DBImportNoTargetConnectionFailedMessage=No se pudo identificar la versi\u00F3n de la base de datos de origen.
-DBImportUpdateDatabaseQuestion=Para realizar la importaci\u00F3n es necesario actualizar la base de datos de origen. \u00BFQuiere actualizarla?
+DBImportUpdateDatabaseQuestion=Para realizar la importaci\u00F3n es necesario actualizar la base de datos de origen. \u00BFDesea actualizarla?
 DBImportVersionNewerMessage=La base de datos de origen corresponde a una versi\u00F3n m\u00E1s nueva de openLCA.
 Daily=Diariamente
 DataCollectionPeriod=Per\u00EDodo de recogida de datos
@@ -125,9 +125,9 @@ DefaultFlowProperty=Propiedad de flujo por defecto
 DefaultMethod=M\u00E9todo por defecto
 DefaultProvider=Proveedor por defecto
 Delete=Eliminar
-DeleteCategoryQuestion=\u00BFQuiere realmente eliminar la categor\u00EDa seleccionada?
+DeleteCategoryQuestion=\u00BFDesea realmente eliminar la categor\u00EDa seleccionada?
 DeleteDatabase=Eliminar base de datos
-DeleteDatabaseParameterQuestion=\u00BFQuiere realmente eliminar el par\u00E1metro seleccionado de la base de datos?
+DeleteDatabaseParameterQuestion=\u00BFDesea realmente eliminar el par\u00E1metro seleccionado de la base de datos?
 DeleteFile=Eliminar archivo
 DeleteParameter=Eliminar par\u00E1metro
 DeleteProcess=eliminar proceso
@@ -137,7 +137,7 @@ Description=Descripci\u00F3n
 DirectContribution=Contribuci\u00F3n directa
 DirectImpact=Impacto directo
 Direction=Direcci\u00F3n
-DoYouReallyWantToDelete=\u00BFRealmente desea eliminar {0}
+DoYouReallyWantToDelete=\u00BFDesea realmente eliminar {0}?
 Doi=Doi
 Dot=Punto
 EcoSpold2Export=Exportar EcoSpold 2
@@ -217,7 +217,7 @@ ILCD_NO_READ_OR_WRITE_ACCESS_MSG=No tiene permiso de lectura o escritura
 ILCD_NetworkImport=Importar red
 ILCD_RunImport=Realizar importaci\u00F3n
 ILCD_SearchFailedMessage=No se puedo encontrar red\:
-ILCD_SearchPageDescription=Busque y seleccione los procesos para importar
+ILCD_SearchPageDescription=Busque y seleccione los procesos para la importar
 ImageExport=Exportar imagen
 ImpactAssessmentMethod=M\u00E9todo de evaluaci\u00F3n de impacto
 ImpactAssessmentMethods=M\u00E9todos de evaluaci\u00F3n de impacto
@@ -225,13 +225,13 @@ ImpactAssessmentResults=Resultados de evaluaci\u00F3n de impacto
 ImpactCategories=Categor\u00EDas de impacto
 ImpactCategory=Categor\u00EDa de impacto
 ImpactContributions=Contribuciones de impacto
-ImpactFactors=Factores de contribuci\u00F3n
+ImpactFactors=Factores de caracterizaci\u00F3n
 Import=Importar...
 ImportData=Importar datos
 ImportDatabase=Importar base de datos
 ImportEcoSpold=Importar EcoSpold
-ImportEcoSpold01DataSets=Importar series de datos EcoSpold 01
-ImportEcoSpold02DataSets=Importar series de datos EcoSpold 02
+ImportEcoSpold01DataSets=Importar conjunto de datos EcoSpold 01
+ImportEcoSpold02DataSets=Importar conjunto de datos EcoSpold 02
 ImportILCD=Importar ILCD
 IndicatorScore=Puntuaci\u00F3n del indicador
 Information=Informaci\u00F3n
@@ -271,7 +271,7 @@ Location=Ubicaci\u00F3n
 Locations=Ubicaciones
 LogNormalDistribution=Distribuci\u00F3n normal logar\u00EDtmica
 Longitude=Longitud
-Map=Trazar
+Map=Mapa
 Mark=Marcar
 MatrixExport=Exportar Matriz
 MatrixFiles=Archivos de matriz
@@ -287,9 +287,9 @@ Minimum=M\u00EDnimo
 Mode=Modo
 ModelGraph=Esquema del sistema
 ModelingAndValidation=Modelado y validaci\u00F3n
-ModelingConstants=Modelando constantes
+ModelingConstants=Constantes del modelado
 MonteCarloSimulation=Simulaci\u00F3n de Monte Carlo
-Monthly=Mensual
+Monthly=Mensualmente
 Move=mover
 Name=Nombre
 NameCannotBeEmpty=El nombre no puede estar vac\u00EDo
@@ -318,19 +318,19 @@ NoCostCategorySelected=No hay ninguna categor\u00EDa de coste seleccionada
 NoDatabaseOpened=No hay ninguna base de datos abierta
 NoDescription=No hay descripci\u00F3n
 NoDistribution=Sin distribuci\u00F3n
-NoExportFilesSelected=No hay archivos para exportar seleccionados
-NoProjectVaraintsAreDefined=No hay variantes de proyecto definidas
-NoQuantitativeReferenceSelected=No hay referencia cuantitativa seleccionada
-NoReferenceFlowPropertySelected=No hay propiedad de flujo de referencia seleccionada
-NoReferenceProcessSelected=No hay proceso de referencia seleccionado
-NoUnitGroupSelected=No ha sido seleccionado ning\u00FAn grupo de unidad
+NoExportFilesSelected=No hay ning\u00FAn archivo para exportar seleccionado
+NoProjectVaraintsAreDefined=No hay ninguna variante de proyecto definida
+NoQuantitativeReferenceSelected=No hay ninguna referencia cuantitativa seleccionada
+NoReferenceFlowPropertySelected=No hay ninguna propiedad de flujo de referencia seleccionada
+NoReferenceProcessSelected=No hay ning\u00FAn proceso de referencia seleccionado
+NoUnitGroupSelected=No hay ning\u00FAn grupo de unidad seleccionado
 None=Ninguno
 NormalDistribution=Distribuci\u00F3n normal
 Normalization=Normalizaci\u00F3n
-NormalizationAndWeightingSet=Conjunto de normalizaci\u00F3n y ponderaci\u00F3n
+NormalizationAndWeightingSet=Grupo de normalizaci\u00F3n y ponderaci\u00F3n
 NormalizationFactor=Factor de normalizaci\u00F3n
 NormalizationWeighting=Normalizaci\u00F3n/Ponderaci\u00F3n
-NormalizationWeightingSets=Conjuntos de normalizaci\u00F3n y ponderaci\u00F3n
+NormalizationWeightingSets=Grupos de normalizaci\u00F3n y ponderaci\u00F3n
 Note=Nota
 Notification=Notificaci\u00F3n
 NumberFormatPage_Description=Establezca el n\u00FAmero de decimales para la visualizaci\u00F3n de los n\u00FAmeros.
@@ -345,7 +345,7 @@ OpenEditor=Abrir editor
 OpenInEditor=Abrir en editor
 OpenLCAUpdateCheck=Comprobaci\u00F3n de actualizaci\u00F3n de openLCA
 OpenMiniatureView=Abrir vista en miniatura
-Other=Otro
+Other=Otros
 Output=Salida
 Outputs=Salidas
 OverwriteFile=Sobrescribir archivo
@@ -368,11 +368,11 @@ PleaseSpecifyUser=Por favor, especifique un usuario
 Port=Puerto
 Prefer=Preferible\: {0}
 Process=Proceso
-ProcessContributions=Contribuciones del proceso
+ProcessContributions=Contribuciones de proceso
 ProcessCosts=Costes del proceso
 ProcessEvaluationAndValidation=Evauaci\u00F3n y validaci\u00F3n del proceso
 ProcessExcelImportDescription=Importar procesos desde MS Excel
-ProcessResults=Resultados del proceso
+ProcessResults=Resultados por proceso
 ProcessType=Tipo de proceso
 Processes=Procesos
 ProducedBy=Producido por
@@ -409,7 +409,7 @@ Rename=Renombrar
 Report=Report
 ReportParameters=Report parameters
 ReserveMemoryMessage=Reservar la siguiente cantidad de memoria para openLCA
-Reset=Reajustar
+Reset=Restaurar
 Resize=ajustar tama\u00F1o
 Result=Resultado
 ResultContributions=Contribuciones de resultados
@@ -441,7 +441,7 @@ SelectADirectory=Seleccionar un directorio
 SelectAUserInterfaceLanguage=Seleccionar un idioma de la interfaz de usuario
 SelectImportFiles=Seleccionar los archivos de importaci\u00F3n
 SelectLanguageNoteMessage=Los cambios no se aplicar\u00E1n hasta que openLCA sea reiniciado
-SelectObjectPage_Description=Por favor, seleccione un directorio de salida y seleccione el {0} que desea exportar
+SelectObjectPage_Description=Por favor, seleccione un directorio de salida y seleccione los {0} que desea exportar
 SelectProviders=Seleccionar proveedores
 SelectRecipients=Seleccionar destinatarios
 SelectTheExportFile=Seleccionar el archivo de exportaci\u00F3n
@@ -468,7 +468,7 @@ Start=Comenzar
 StartDate=Fecha de comienzo
 SubCategory=Subcategor\u00EDa
 Synonyms=Sin\u00F3nimos
-SystemProcess=Proceso del sistema
+SystemProcess=Proceso agregado
 SystemSaveProceedQuestion=Para realizar la acci\u00F3n requerida el sistema de producto debe ser guardado previamente. \u00BFDesea continuar?
 Tab=Pesta\u00F1a
 TargetAmount=Cantidad objetivo
