included preference page for changing the user interface language

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -438,7 +438,7 @@ Searching=Searching...
 SearchingForUnits=Searching for units...
 Select=Select {0}
 SelectADirectory=Select a directory
-SelectAUserInterfaceLanguage=Select a user interface language
+SelectAUserInterfaceLanguage=User interface language
 SelectImportFiles=Select import files
 SelectLanguageNoteMessage=Changes will not take affect until openLCA is restarted
 SelectObjectPage_Description=Please specify an output directory and select the {0} you want to export
