Added external source selection to parameters in lcia method

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -159,6 +159,7 @@ ExportTitle=openLCA product system export
 ExportTo=Exporting to {0}
 ExportToExcel=Export to Excel
 ExportDatabase=Export database
+ExternalSource=External source
 Factor=Factor
 FancyToolTip_NoDescription=No description
 File=File
