--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -156,6 +156,7 @@ ExportTitle=openLCA Produktsystemexport
 ExportTo=Exportiere nach {0}
 ExportToExcel=Export nach Excel
 ExportDatabase=Exportiere Datenbank
+ExternalSource=Externe Quelle
 Factor=Faktor
 FancyToolTip_NoDescription=Keine Beschreibung
 File=Datei
