Corrected some merging errors

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -168,6 +168,7 @@ ExportResults=Export results
 ExportResultsToExcel=Export results to Excel
 ExportToExcel=Export to Excel
 ExportingProcesses=Exporting processes
+ExternalSource=External source
 Factor=Factor
 FailedToLoadFlowProperty=Failed to load flow property
 File=&File
