--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -168,6 +168,7 @@ ExportResults=Ergebnisse exportieren
 ExportResultsToExcel=Ergebnisse nach Excel exportieren 
 ExportToExcel=Export nach Excel
 ExportingProcesses=Exportiere Prozesse
+ExternalSource=Externe Quelle
 Factor=Faktor
 FailedToLoadFlowProperty=Flusseigenschaft konnte nicht geladen werden
 File=&Datei
