Finalization of SCS changes

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -151,6 +151,7 @@ English=English
 Error=Error
 ErrorPopupMessage=See the log-file for further information
 ErrorPopupTitle=An unexpected error occured
+EvaluateLocations=Evaluate for existing locations
 Example=Example
 ExcelExport=Excel Export
 Expand=expand
