--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -151,6 +151,7 @@ English=Englisch
 Error=Fehler
 ErrorPopupMessage=Bitte sehen Sie die Log-Datei ein, um weitere Informationen zu erhalten
 ErrorPopupTitle=Ein unerwarteter Fehler ist aufgetreten
+EvaluateLocations=Für bestehende Orte auswerten
 Example=Beispiel
 ExcelExport=Excel Export
 Expand=vergr\u00F6\u00DFern
